Removed unneccesery css selectors and fixed post-statis panel not aligning

--- a/website/smw/static/smw/style.css
+++ b/website/smw/static/smw/style.css
@@ -174,7 +174,7 @@ form{
 .postTitle{
     padding: 15px;
     font-size: 2em;
-    max-height: 125px;
+/*    max-height: 125px;*/
     overflow: hidden;
 }
 
@@ -204,12 +204,6 @@ form{
 /*    background-color: crimson;*/
     padding: 5px;
     border-radius: 15px;
-}
-
-.postColFix{
-    /* Color fix for posts... or something */
-    background-color: rgb(45, 45, 45);
-    color: white;
 }
 
 .postBody {
@@ -361,9 +355,5 @@ footer ul{
 
     .nav{
         margin-left: -10px;
-    }
-    
-    .search{
-        
     }
 }
